--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,24 @@
 @font-face {
-    font-family: 'Roboto';
+    font-family: Roboto;
     src: url(../fonts/Roboto-Regular.ttf);
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
-    font-family: 'Roboto';
+    font-family: Roboto;
     src: url(../fonts/Roboto-Italic.ttf);
     font-weight: normal;
     font-style: italic;
 }
 @font-face {
-    font-family: 'Roboto';
+    font-family: Roboto;
     src: url(../fonts/Roboto-Bold.ttf);
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: Roboto;
     src: url(../fonts/Roboto-BoldItalic.ttf);
     font-weight: bold;
     font-style: italic;
@@ -38,11 +38,10 @@
     height: 569px;
 }
 
-.offer .container {
+.container {
     width: 1232px;
     margin: 0 auto;
 }
-
 hr {
     width: 100px;
     height: 4px;
@@ -85,8 +84,38 @@ h2 {
     text-align: center;
     color: #383838;
 }
-
 .hotels {
     height: 828px;
     background: #EAF0F9;
+}
+.flex_hotels{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.item_hotels{
+    width: 296px;
+    height: 435px;
+}
+.text_block2_1{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    color: #3077C6;
+}
+.text_block2_2 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    color: #BFBFBF;
+}
+.item_hotels{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 100px;
 }
