--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,29 @@
     margin: 0;
     padding: 0;
 }
+.header{
+    height: 900px;
+    background-image: url("../images/castel.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background: #0018ea;
+}
+h1{
+    margin-top: 100px;
+    position: absolute;
+    width: 542px;
+    height: 118px;
+    left: 104px;
+    top: 293px;
+
+    font-family: Roboto,serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 50px;
+    line-height: 59px;
+    color: #FFFFFF;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
 .offer {
     height: 569px;
 }
@@ -88,15 +111,19 @@ h2 {
     background: #EAF0F9;
 }
 
-.flex_hotels {
+.flex_hotels,.flex_dest {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.item_hotels {
+.item_hotels{
     width: 296px;
     height: 435px;
+}
+.item_dest{
+    width: 296px;
+    height: 350px;
 }
 
 .text_block2_1 {
@@ -117,9 +144,103 @@ h2 {
     color: #BFBFBF;
 }
 
-.item_hotels {
+.item_hotels,.item_dest {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     margin-top: 100px;
+}
+.btn-group {
+    display: inline-block;
+    margin-top: 100px;
+    background-color: #eaf0f9;
+    border-radius: 10px;
+}
+.btn-group button {
+
+    color: #000000;
+    cursor: pointer;
+    border: none;
+    padding: 16px 52px;
+    border-radius: 10px;
+    font-family: Roboto, serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    text-align: center;
+}
+
+.btn-group button:hover {
+    background-color: #0018ea;
+    color: #ffffff;
+}
+.rnd_btn{
+    margin-top: 60px;
+    width: 35px;
+    height: 35px;
+    background: #eaf0f9;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 500;
+    transform: rotate(90deg);
+    position: absolute;
+    left: 50%;
+    border: none;
+}
+.btm-section{
+    margin-top: 120px;
+    height: 200px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    background-color: #eaf0f9;
+}
+
+.img_round{
+    margin: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 86px;
+    height: 86px;
+    border-radius: 50%;
+    background: #ffffff;
+}
+.btm_block{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /*align-items: center;*/
+}
+.btm_text{
+    font-family: Roboto,serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    color: #383838;
+}
+.btm_btn{
+    margin-top: 20px;
+    height: 48px;
+    width: 128px;
+    border-radius: 10px;
+    background: #ffffff;
+    color: #3077C6;
+    border: 1px solid #3077C6;
+    font-family: Roboto,serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+}
+.vector{
+    display: flex;
+    flex-grow: 3;
+    justify-content: flex-end;
+    margin-right: 10px;
+    padding-bottom: 150px;
 }
