--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ h1{
     left: 104px;
     top: 293px;
 
-    font-family: Roboto,serif;
+    font-family: Roboto,sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 50px;
@@ -72,7 +72,7 @@ hr {
 
 h2 {
     text-align: center;
-    font-family: Roboto, serif;
+    font-family: Roboto, sans-serif;
     font-weight: 500;
     font-size: 40px;
     line-height: 47px;
@@ -99,7 +99,7 @@ h2 {
 .text_block {
     width: 296px;
     vertical-align: bottom;
-    font-family: Roboto, serif;
+    font-family: Roboto, sans-serif;
     font-size: 24px;
     line-height: 28px;
     text-align: center;
@@ -127,7 +127,7 @@ h2 {
 }
 
 .text_block2_1 {
-    font-family: Roboto, serif;
+    font-family: Roboto, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -136,7 +136,7 @@ h2 {
 }
 
 .text_block2_2 {
-    font-family: Roboto, serif;
+    font-family: Roboto, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -163,7 +163,7 @@ h2 {
     border: none;
     padding: 16px 52px;
     border-radius: 10px;
-    font-family: Roboto, serif;
+    font-family: Roboto, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -191,6 +191,7 @@ h2 {
 .btm-section{
     margin-top: 120px;
     height: 200px;
+    width: 100%;
     display: flex;
     justify-content: left;
     align-items: center;
@@ -211,10 +212,9 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /*align-items: center;*/
 }
 .btm_text{
-    font-family: Roboto,serif;
+    font-family: Roboto,sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
@@ -230,7 +230,7 @@ h2 {
     background: #ffffff;
     color: #3077C6;
     border: 1px solid #3077C6;
-    font-family: Roboto,serif;
+    font-family: Roboto,sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -239,8 +239,46 @@ h2 {
 }
 .vector{
     display: flex;
-    flex-grow: 3;
+    flex-grow: 6;
     justify-content: flex-end;
     margin-right: 10px;
     padding-bottom: 150px;
+}
+.footer{
+    background: #10367C;;
+    height: 630px;
+}
+.main_foot_block{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.footer_text_block{
+    margin-top: 115px;
+
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*justify-content: space-between;*/
+
+}
+.footer_text_block>div{
+    margin: 24px 0;
+    font-family: Roboto,sans-serif;
+    line-height: 24px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    text-align: left;
+    color: #FFFFFF;
+}
+.sign{
+    margin-top: 65px;
+    font-family: Roboto,sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: left;
+    color: #FFFFFF;
 }
