--- a/css/styles.css
+++ b/css/styles.css
@@ -1,169 +1,132 @@
-@font-face {
-    font-family: Roboto;
-    src: url(../fonts/Roboto/Roboto-Regular.ttf);
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: Roboto;
-    src: url(../fonts/Roboto/Roboto-Italic.ttf);
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: Roboto;
-    src: url(../fonts/Roboto/Roboto-Bold.ttf);
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: Roboto;
-    src: url(../fonts/Roboto/Roboto-BoldItalic.ttf);
-    font-weight: bold;
-    font-style: italic;
-}
+@import "font-roboto.css";
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-.header{
+
+.container {
+    padding: 0 120px;
+    font-family: Roboto, sans-serif;
+}
+
+.header {
     height: 900px;
     background-image: url("../images/castel.png");
     background-repeat: no-repeat;
     background-position: center;
-    background: #0018ea;
+    background-size: cover;
 }
-h1{
-    margin-top: 100px;
+
+h1 {
     position: absolute;
-    width: 542px;
-    height: 118px;
+    margin-top: 100px;
     left: 104px;
     top: 293px;
-
-    font-family: Roboto,sans-serif;
     font-style: normal;
-    font-weight: 500;
     font-size: 50px;
     line-height: 59px;
     color: #FFFFFF;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-.offer {
-    height: 569px;
-}
-
-.container {
-    margin: 0 104px 0 104px;
+    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 hr {
     border: 0;
     width: 100px;
     height: 4px;
-    margin: 0 auto;
+    margin: 20px auto;
     background: #F5BD41;
 }
 
 h2 {
     text-align: center;
-    font-family: Roboto, sans-serif;
     font-weight: 500;
     font-size: 40px;
     line-height: 47px;
     color: #383838;
-    padding: 120px 0 20px 0;
 }
 
-.container .flex {
+.offer, .footer, .hotels, .destinations {
+    padding: 120px 0;
+}
+
+.offer_main {
     margin-top: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.flex .item {
+.offer_item {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    width: 296px;
-    height: 176px;
+    width: 25%;
 }
 
-.text_block {
-    width: 296px;
-    vertical-align: bottom;
-    font-family: Roboto, sans-serif;
+.offer_icon {
+    height: 100px;
+    width: 100px;
+}
+
+.offer_item_text {
+    margin-top: 48px;
     font-size: 24px;
     line-height: 28px;
-    text-align: center;
     color: #383838;
 }
 
 .hotels {
-    height: 828px;
     background: #EAF0F9;
 }
 
-.flex_hotels,.flex_dest {
+.hotels_main, .destinations_main {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 100px;
 }
 
-.item_hotels{
-    width: 296px;
-    height: 435px;
-}
-.item_dest{
-    width: 296px;
-    height: 350px;
+.hotels_item {
+    width: 25%;
 }
 
-.text_block2_1 {
-    font-family: Roboto, sans-serif;
+/*.hotels_item_img {*/
+/*    width: 296px;*/
+/*    height: 350px;*/
+/*}*/
+
+.hotel_item_name,.destinations_item_name{
+    margin-top: 24px;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
-    line-height: 28px;
     color: #3077C6;
 }
 
-.text_block2_2 {
-    font-family: Roboto, sans-serif;
+.hotel_item_place {
+    margin-top: 24px;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
-    line-height: 28px;
     color: #BFBFBF;
 }
 
-.item_hotels,.item_dest {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin-top: 100px;
-}
 .btn-group {
     display: inline-block;
     margin-top: 100px;
     background-color: #eaf0f9;
     border-radius: 10px;
 }
-.btn-group button {
 
+.btn-group button {
     color: #000000;
     cursor: pointer;
     border: none;
     padding: 16px 52px;
     border-radius: 10px;
-    font-family: Roboto, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -174,20 +137,19 @@ h2 {
     background-color: #0018ea;
     color: #ffffff;
 }
-.rnd_btn{
+
+.rnd_btn {
     margin-top: 60px;
-    width: 35px;
-    height: 35px;
+    width: 40px;
+    height: 40px;
     background: #eaf0f9;
     border-radius: 50%;
-    text-align: center;
-    font-size: 24px;
-    font-weight: 500;
-    transform: rotate(90deg);
     position: absolute;
     left: 50%;
     border: none;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
+
 .btm-section{
     margin-top: 120px;
     height: 200px;
@@ -198,7 +160,7 @@ h2 {
     background-color: #eaf0f9;
 }
 
-.img_round{
+.img_round {
     margin: 40px;
     display: flex;
     justify-content: center;
@@ -208,13 +170,14 @@ h2 {
     border-radius: 50%;
     background: #ffffff;
 }
-.btm_block{
+
+.btm_block {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.btm_text{
-    font-family: Roboto,sans-serif;
+
+.btm_text {
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
@@ -222,7 +185,8 @@ h2 {
     text-align: center;
     color: #383838;
 }
-.btm_btn{
+
+.btm_btn {
     margin-top: 20px;
     height: 48px;
     width: 128px;
@@ -230,41 +194,52 @@ h2 {
     background: #ffffff;
     color: #3077C6;
     border: 1px solid #3077C6;
-    font-family: Roboto,sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 21px;
     text-align: center;
 }
-.vector{
+
+.vector {
     display: flex;
     flex-grow: 6;
     justify-content: flex-end;
     margin-right: 10px;
     padding-bottom: 150px;
 }
-.footer{
+
+.footer {
     background: #10367C;;
-    height: 630px;
+    padding: 120px 0;
 }
-.main_foot_block{
-    margin-top: 50px;
+
+.main_foot_block {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 }
-.footer_text_block{
-    margin-top: 115px;
 
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*justify-content: space-between;*/
-
+.footer_text_block {
+    width: 33.33%;
+    margin-right: 16px;
 }
-.footer_text_block>div{
+
+.footer_text_block > li {
+    list-style: none;
+    margin-bottom: 25px;
+}
+
+.footer_text_block > li > a {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+}
+
+.footer_text_block > div {
     margin: 24px 0;
-    font-family: Roboto,sans-serif;
     line-height: 24px;
     font-style: normal;
     font-weight: normal;
@@ -272,9 +247,9 @@ h2 {
     text-align: left;
     color: #FFFFFF;
 }
-.sign{
+
+.sign {
     margin-top: 65px;
-    font-family: Roboto,sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
